Revision history for File::DataClass

          - Fixed bug in ::IO::exists
          - Added IO::Handle proxy methods to ::IO
          - Improved test coverage
          - Overload stringify in ::IO uses handle if no name

0.56.1    2015-03-19 14:57:54
          - Deleted _lock_obj from ::IO. Unusable misfeature
          - Fixed IO::seek
          - Added IO::tell
          - IO::stat returns undef if no name or file handle
          - Will stat an open file handle
          - Added explicite ::IO bool overload
          - Added IO::hexdigest. IO::digest now returns an object ref
          - Added result source types

0.55.1    2015-02-05 00:03:07
          - Replaced MooX::ClassStash with Subclass::Of and a factory pattern
          - Changed default perms to 640

0.54.1    2014-12-19 22:52:50
          - Updated prereqs. Slaven is testing with modules from the back
            pan again 0b1e0b44-87ba-11e4-ac75-b26ee0bfc7aa

0.53.1    2014-12-19 11:47:56
          - Storage API methods now called read_from_file and write_to_file
          - Dropped Class::Method::ModifiersX::Augment
          - Coverted rest to lexical subroutines
          - Converted ::IO to lexical subroutines
          - Added ::IO->digest. Robbed from Path::Tiny

0.52.1    2014-11-10 12:40:46
          - Fixed NTFS skip in tests

0.51.1    2014-11-09 15:49:44
          - Mark NTFS as unsupported
          - Make ::IO::atomic a no op on mswin32
            f1cbd4c4-6bf5-1014-bf4f-15730ce696e1 - which didn't work
            so behaviour restored
          - Added t/boilerplate.pm
          - New win32 fail added debug to tests
            7ccf4f62-8e65-1014-a370-e51e2b825c07

0.50.1    2014-11-07 18:49:49
          - Added async locking and constants
          - Added IO::has_lock to track the state of the flock
          - Changed IO::_lock from a bool to an enumerated type
            Can be FALSE, LOCK_BLOCKING, or LOCK_NONBLOCKING

0.49.1    2014-10-02 20:57:55