@@ -1,5 +1,6 @@
 Revision history for File::DataClass
 
+          - Refactored cache of cache objects
           - Fixed bug in ::IO::exists
           - Added IO::Handle proxy methods to ::IO
           - Improved test coverage
